FreedomSanboxAntDeploy/src/objects/Event_Master__c.object
<CustomObject>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <label>Escalated To</label>
        <picklist>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalation_Event_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Event Master</label>
        <referenceTo>Event_Master__c</referenceTo>
        <relationshipLabel>Event Masters</relationshipLabel>
        <relationshipName>Event_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Task_Event_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Event Master</label>
        <referenceTo>Event_Master__c</referenceTo>
        <relationshipLabel>Event Masters (Task Event Master)</relationshipLabel>
        <relationshipName>Event_Masters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Merge_Fields__c</fullName>
        <label>Template Merge Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Escalated_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Escalation</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Task</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>